<resources>
    <string name="app_name">Tims App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_streamer">Spotify Streamer</string>
    <string name="app_scores">Football Scores</string>
    <string name="app_library">Library</string>
    <string name="app_buildbigger">Build It Bigger</string>
    <string name="app_xyz">XYZ</string>
    <string name="app_capstone">Capstone</string>
</resources>
