<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivityFragment">

    <TextView
        android:text="My Apps"
        android:id="@+id/textView"
        style="@style/TitleStyle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contextClickable="false"
            android:measureWithLargestChild="false">

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/app_streamer"
                android:textSize="18sp"
                android:onClick="launchApp"
                style="@style/ButtonStyle">
            </Button>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/app_scores"
                android:onClick="launchApp"
                style="@style/ButtonStyle">
            </Button>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/app_library"
                android:onClick="launchApp"
                style="@style/ButtonStyle">
            </Button>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/app_buildbigger"
                android:onClick="launchApp"
                style="@style/ButtonStyle">
            </Button>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/app_xyz"
                android:onClick="launchApp"
                style="@style/ButtonStyle">
            </Button>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/app_capstone"
                android:onClick="launchApp"
                style="@style/ButtonStyle">
            </Button>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
